# SchemasAI-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
schemas/: __main__.py  config.py
schemas/db/: session.py
schemas/db/migrations/: env.py
schemas/db/migrations/versions/: 2025_04_17_0906-c6b8350a4ed7_initial_migration.py
schemas/db/models/: __init__.py  auth.py  base.py  chat.py  message.py  user.py
schemas/db/schemas/: auth.py  chat.py  message.py  user.py
schemas/endpoints/: __init__.py  auth.py  chat.py  dependencies.py  message.py  user.py  websocket.py
schemas/repositories/: auth.py  base.py  chat.py  message.py  user.py
schemas/services/: auth.py  chat.py  message.py  rabbit.py  user.py  websocket_service.py
schemas/utils/: enums.py  exceptions.py
